Changes: - fixed double scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,22 +8,37 @@ html {
 
 }
 
-body {}
+body {
+    /*overflow: hidden;*/
+}
 
 .pages-wrapper {
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-    /*scroll-padding: 5vh;*/
+    position: relative;
 }
 
-.test {
-    height: 100vh;
-    overflow-y: scroll;
+.tsparticles-canvas-el {
+    /*overflow: hidden;*/
+}
+
+.react-particles-js-wrapper {
+    /*height: 100vh;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*overflow: hidden;*/
+    /*position: relative;*/
+    /*scroll-snap-align: start;*/
+}
+
+.react-particles {
+    height: 100%;
     position: absolute;
-    left: 0;
     top: 0;
-    width: 100vw;
+    bottom: 0;
+    left: 0;
+    /*overflow-y: scroll;*/
 }
 
 .canvas {
@@ -37,6 +52,7 @@ body {}
     display: flex;
     justify-content: center;
     align-items: center;
+    /*overflow-y: scroll;*/
     scroll-snap-align: start;
 }
 
